--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -115,10 +115,13 @@ body {
   width: 100%;
   border-radius: 100px;
   background: #D0DCE7;
-  transition-duration: .6s;
+  transition-duration: 0.6s;
 }
 
 .button:hover {
   background: #83ADD3;
   color: #F8FCFF;
 }
+
+/* ====================================================================== */|
+
